# moneymotion

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2025-08-28-000154_create_spendings/: down.sql  up.sql
migrations/2025-08-28-055152_create_incomes/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
