[package]
name = "moneymotion"
version = "0.1.0"
authors = ["Juan Ananda <juanoude@gmail.com>"]
license = "BSD-3"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
diesel = { version = "2.2.12", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
